fix(css): vertically align logo and title

--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,20 @@ body{
 
 header{
     background-color: white;
-    height: 80px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    height: 110px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 10px;
     vertical-align: middle;
 }
 
 #logo{
 width: 80px;
+vertical-align: middle;
+}
+
+h1{
+    vertical-align: middle;
 }
 
 .logo-text{
@@ -109,17 +114,17 @@ div{
     background-color: white;
     width: 1200px;
     margin: 0 auto;
+    margin-bottom: 10px;
     border-radius: 5px;
 }
 
 .button-conteiner{
     margin-top: 50px;
-    margin-bottom: 0;
     padding: 15px 60px;
 }
 
 .section-conteiner{
     margin-top: 5px;
+    margin bottom: 5px;
     padding: 35px 60px;
 }
-
